// Copyright 2025 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.privacybudgetmanager;

option java_package = "org.wfanet.measurement.privacybudgetmanager";
option java_multiple_files = true;
option java_outer_classname = "PrivacyLandscapeMappingProto";


message PrivacyLandscapeMapping {
   
   string fromLandscape = 1;
   string toLandscape = 2;

   repeated DimensionMapping mappings = 3;
   repeated DimensionAddition addition = 4; 
 
   // Tells the code that everything should be fanned out to this new dim
   message DimensionAddition {
     repeated DimensionValue newDimension = 1;
   }

   // Tells the code that all dimvaluesFrom should be carried to dimvaluesTo
   message DimensionMapping {
     repeated DimensionValue dimvaluesFrom = 1;
     repeated DimensionValue dimvaluesTo = 2;
   }
   
   message DimensionValue {
     
     // Qualifying name that will be used in the proto reflection 
     // on the event template. e.g. person.age or person.geo
     string name = 1; 
     
     Value value = 2;

     message Value {
       oneof option {
         // E.g 18_24 for Age
         string enumValue = 1;
         // E.g 23 for Geo Code
         int32 intValue = 2;
          // E.g 0.1 some watch time?
         float floatValue = 3;
       }
     }
  }
}
